basic crud for lineitems
