# api/swagger.json
@@ -15,6 +15,9 @@
   }, {
     "name" : "product",
     "description" : "Operations on products"
+  }, {
+    "name" : "lineItem",
+    "description" : "Operations on lineItems"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
@@ -610,6 +613,250 @@
           }
         }
       }
+    },
+    "/products/{productId}/lineItems" : {
+      "get" : {
+        "tags" : [ "lineItem" ],
+        "summary" : "Search lineItem",
+        "description" : "Search lineItem. Select values and filter fields for string patterns",
+        "operationId" : "findLineItem",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "fields",
+          "in" : "query",
+          "description" : "Select fields to be returned from shop.",
+          "required" : false,
+          "type" : "array",
+          "items" : {
+            "type" : "string",
+            "default" : "available",
+            "enum" : [ "id", "shopId", "name", "amount", "price" ]
+          },
+          "collectionFormat" : "multi"
+        }, {
+          "name" : "id",
+          "in" : "query",
+          "description" : "LineItem id considered for filter",
+          "required" : false,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "shopId",
+          "in" : "query",
+          "description" : "Shop id considered for filter",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "name",
+          "in" : "query",
+          "description" : "LineItems name considered for filter",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "amount",
+          "in" : "query",
+          "description" : "Shop id considered for filter",
+          "required" : false,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "price",
+          "in" : "query",
+          "description" : "Shop id considered for filter",
+          "required" : false,
+          "type" : "number",
+          "format" : "float"
+        }, {
+          "name" : "offset",
+          "in" : "query",
+          "description" : "Page start number",
+          "required" : false,
+          "type" : "integer",
+          "default" : 0,
+          "format" : "int64"
+        }, {
+          "name" : "limit",
+          "in" : "query",
+          "description" : "Items per page",
+          "required" : false,
+          "type" : "integer",
+          "default" : 10,
+          "format" : "int64"
+        }, {
+          "name" : "orderBy",
+          "in" : "query",
+          "description" : "Sort items by",
+          "required" : false,
+          "type" : "string",
+          "default" : "id",
+          "enum" : [ "id", "ownerId", "name" ]
+        }, {
+          "name" : "sort",
+          "in" : "query",
+          "description" : "Sort method",
+          "required" : false,
+          "type" : "string",
+          "default" : "asc",
+          "enum" : [ "asc", "desc" ]
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/LineItem"
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "lineItem" ],
+        "summary" : "Create LineItems",
+        "description" : "Create a LineItem",
+        "operationId" : "createLineItems",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Shop fields. All fields must be provided. The Id field here is ignored and will be auto generated in the db.",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/LineItem"
+          }
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "successfullly created shop"
+          }
+        }
+      }
+    },
+    "/products/{productId}/lineItems/{lineItemId}" : {
+      "get" : {
+        "tags" : [ "lineItem" ],
+        "summary" : "get single lineItem by id",
+        "description" : "get single lineItem by id",
+        "operationId" : "getSingleLineItem",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "lineItemId",
+          "in" : "path",
+          "description" : "Id of lineItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation"
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "lineItem" ],
+        "summary" : "Update shop",
+        "description" : "Update shop info. Only filled in fields will change in shop.",
+        "operationId" : "updateLineItem",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "lineItemId",
+          "in" : "path",
+          "description" : "Id of lineItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "ownerId",
+          "in" : "query",
+          "description" : "Id of owner",
+          "required" : false,
+          "type" : "integer"
+        }, {
+          "name" : "name",
+          "in" : "query",
+          "description" : "LineItems name",
+          "required" : false,
+          "type" : "string"
+        }, {
+          "name" : "amount",
+          "in" : "query",
+          "description" : "LineItems amount",
+          "required" : false,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "price",
+          "in" : "query",
+          "description" : "LineItems price",
+          "required" : false,
+          "type" : "number",
+          "format" : "float"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successfullly updated account"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "lineItem" ],
+        "summary" : "Delete lineItem",
+        "description" : "Delete lineItem by id",
+        "operationId" : "deleteLineItem",
+        "consumes" : [ "application/x-www-form-urlencoded" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "productId",
+          "in" : "path",
+          "description" : "Id of product",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "name" : "lineItemId",
+          "in" : "path",
+          "description" : "Id of lineItem",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "204" : {
+            "description" : "successfullly deleted lineItem."
+          }
+        }
+      }
     }
   },
   "definitions" : {
@@ -686,6 +933,45 @@
         "lineItemId" : 6,
         "name" : "name",
         "id" : 0
+      }
+    },
+    "LineItem" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "productId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "shopId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "amount" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "price" : {
+          "type" : "integer",
+          "format" : "int64"
+        }
+      },
+      "xml" : {
+        "name" : "Shop"
+      },
+      "example" : {
+        "amount" : 5,
+        "productId" : 6,
+        "price" : 5,
+        "name" : "name",
+        "id" : 0,
+        "shopId" : 1
       }
     }
   }
